css/style.css
/**
* Wordfind.js 0.0.1
* (c) 2012 Bill, BunKat LLC.
* Wordfind is freely distributable under the MIT license.
* For all details and documentation:
*     http://github.com/bunkat/wordfind
*/
body {
  background-color: white;
}

table td {
  padding: 0px;
}

#firstPage {
  align:center;
  text-align: center;
  font: 2em sans-serif;
}

#wordList {
  width: 300px; /* screen / 4 ?? */
}

.level-button {
  vertical-align:middle;
  background-size: 100%;
  background-color: transparent;
  height: 66px;  /* 6 * @subcell-size;  */
  width: 66px;
  border-radius: 0;
  border: 0px;
  padding: 11px; /* @subcell-size;  */
  margin: 22px;
}

.level-button:hover {
  background-color: transparent;
}

#easy-button {
  background-image: url('../icons/easy.svg');
}

#medium-button {
  background-image: url('../icons/medium.svg');
}

#hard-button {
  background-image: url('../icons/hard.svg');
}

#add-word-button {
  background-image: url('../icons/plus.svg');
  background-size: 100%;
  background-color: transparent;
  height: 33px;  /* 4 * @subcell-size;  */
  width: 33px;
  border-radius: 0;
  border: 0px;
  padding: 11px; /* @subcell-size;  */
  vertical-align: bottom;
}

#add-word-button:hover {
  background-color: transparent;
}

.blueButton {
  padding: 10px;
  font: 1.5em sans-serif;
  background-color: #03a9f4;
}

.blueButton:disabled {
  background-color: #7c7c7c;
}

.blueButton:hover {
  border-color: transparent;
}

.blueBorderButton {
  padding: 10px;
  font: 1.5em sans-serif;
  background-color: #ffffff;
  border-color: #03a9f4;
  color: #222222;
}

.blueBorderButton:hover, .blueBorderButton:focus {
  background-color: #ffffff;
  border-color: #03a9f4;
  border-width: 4px;
}

#find-words-button:disabled, #find-words-button:hover, #find-words-button:active {
  background-color: #03a9f4;
  color: white;
}

#validation-error {
  position: absolute;
  background-image: url('../icons/red_pin.png');
  background-repeat: no-repeat;
}

#validation-error-msg {
  margin-top: 15px;
  padding: 10px;
  background-color: #c13333;
  color: white;
  border-radius: 5px;
  /* left: 1200px; */
}

#floatingToolbar {
  position: absolute;
  top: 0px;
  left: 0px;
  padding: 0px;
  background-color: transparent;
  height: 55px;
  -moz-user-select: none;
  -webkit-user-select: none;

}

